# Isaac

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: ChainedCollision.cpp  ChaoticCluster.cpp  Cube.cpp  MutualRotation.cpp  RotationAroundMassiveSphere.cpp  Sphere.cpp  TransferOfMotion.cpp
include/: Circles.hpp  Constants.hpp  Exceptions.hpp  Shapes.hpp  exceptions.hpp  vector2d.hpp  vector3d.hpp
include/Kernel/: Benchmark.hpp  Circle.hpp  Circle2D.hpp  Circles.hpp  Constants.hpp  Curve2D.hpp  Curve3D.hpp  Curves2D.hpp  Exceptions.hpp  Mesh.hpp  Polygon.hpp  RigidBody2D.hpp  Shapes.hpp  Sphere.hpp  Vector.hpp  benchmark.hpp
include/Rendering/: Camera.hpp  Renderable_Object_2D.hpp  Shader.hpp  Window.hpp  example.hpp
src/: Circles.cpp  Shapes.cpp  main.cpp  vector2d.cpp  vector3d.cpp
src/Kernel/: CMakeLists.txt  Circle.cpp  Circle2D.cpp  Circles.cpp  Curve2D.cpp  Curve3D.cpp  Curves2D.cpp  Mesh.cpp  Polygon.cpp  RigidBody2D.cpp  Shapes.cpp  Sphere.cpp  Vector.cpp
src/Rendering/: CMakeLists.txt  Camera.cpp  FragmentShader.frag  Renderable_Object_2D.cpp  Shader.cpp  VertexShader.vert  Window.cpp  example.cpp
tests/Kernel/: CMakeLists.txt  Circle2DTests.cpp  CircleTests.cpp  Curve2DTests.cpp  Curve3DTests.cpp  Curves2DTests.cpp  PolygonTests.cpp  RigidBody2DTests.cpp  SphereTests.cpp
tests/Rendering/: CMakeLists.txt  Renderable_Object_2D_Tests.cpp
